@@ -5,10 +5,21 @@ import com.oxyl.coursepfback.core.model.PlanteModel;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
+/**
+ * Classe de mapping pour convertir les objets Plante entre DTO et Model.
+ * Permet d'assurer la conversion des données entre la couche API et la couche métier.
+ * Gère la transformation des attributs spécifiques aux plantes.
+ */
 @Component
 public class PlanteDtoMapper {
 
+    /**
+     * Convertit un modèle de plante en DTO
+     * @param planteModel Le modèle de plante à convertir
+     * @return Le DTO correspondant, ou null si le modèle est null
+     */
     public PlanteDto mapModelToDto(PlanteModel planteModel) {
         if (planteModel == null) {
             return null;
@@ -27,10 +38,16 @@ public class PlanteDtoMapper {
         return planteDto;
     }
 
+    /**
+     * Convertit un DTO de plante en modèle
+     * @param planteDto Le DTO à convertir
+     * @return Le modèle correspondant, ou null si le DTO est null
+     */
     public PlanteModel mapDtoToModel(PlanteDto planteDto) {
         if (planteDto == null) {
             return null;
         }
+
         PlanteModel planteModel = new PlanteModel();
         planteModel.setId_plante(planteDto.getId_plante());
         planteModel.setNom(planteDto.getNom());
@@ -44,9 +61,25 @@ public class PlanteDtoMapper {
         return planteModel;
     }
 
-    public List<PlanteDto> mapListModelToDto(List<PlanteModel> plantes) {
-        return plantes.stream()
+    /**
+     * Convertit une liste de modèles en liste de DTOs
+     * @param planteModels La liste de modèles à convertir
+     * @return La liste des DTOs correspondants
+     */
+    public List<PlanteDto> mapListModelToDto(List<PlanteModel> planteModels) {
+        return planteModels.stream()
                 .map(this::mapModelToDto)
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    /**
+     * Convertit une liste de DTOs en liste de modèles
+     * @param planteDtos La liste de DTOs à convertir
+     * @return La liste des modèles correspondants
+     */
+    public List<PlanteModel> mapListDtoToModel(List<PlanteDto> planteDtos) {
+        return planteDtos.stream()
+                .map(this::mapDtoToModel)
+                .collect(Collectors.toList());
     }
 }
